--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ body{
     padding: 0;
     font-size: 17px;
     color: black;
+    display: block;
+    width: 100%;
 }
 
 #HeaderWrapper{
@@ -113,6 +115,7 @@ main{
     justify-content: center;
     height: 100vh;
     flex-wrap: wrap;
+    width: 100%;
 }
 
 .MainThings h1{
@@ -196,13 +199,11 @@ main{
     cursor: pointer;
 }
 
-.share{
-    animation: pictureIn 1.3s;
-}
-
 .grid{
+    width: 100%;
     display: grid;
     grid-template-columns: 60% 40%;
+    margin-top: 25px;
 }
 
 #project1 img{
@@ -238,20 +239,28 @@ main{
     main{
         margin: 10vh 5px 0 5px;
     }
-    .container{
-        overflow: none;
-    }
-    #mainHeader{
-        overflow: hidden;
-    }
 }
 
 #scrollPic{
     max-width: 90px;
     cursor: pointer;
+    animation: upAndDown 1s infinite;
+    margin-left: 45%;
 }
 
 #scroll{
     text-align: center;
     width: 100%;
+}
+
+@keyframes upAndDown{
+    0%{
+        transform: translateY(-5px);
+    }
+    50%{
+        transform: translateY(1px);
+    }
+    100%{
+        transform: translateY(-5px);
+    }
 }
