--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ body{
     font-size: 17px;
     color: black;
     display: block;
-    width: 100%;
+    max-width: 100%;
+    line-height:1.6em;
 }
 
 #HeaderWrapper{
@@ -62,6 +63,7 @@ nav li{
 
 main{
     margin: 10vh 20% 0 20%;
+    overflow: hidden;
 }
 
 #Name{
@@ -91,7 +93,7 @@ main{
 
 #Picture{
     animation: pictureIn 1.5s;
-    width: 100%;
+    max-width: 100%;
 }
 
 @keyframes pictureIn{
@@ -107,6 +109,7 @@ main{
 
 #Header{
     height: 82vh;
+    width: 100%;
 }
 
 .MainThings{
@@ -239,6 +242,12 @@ main{
     main{
         margin: 10vh 5px 0 5px;
     }
+    #scroll{
+        display: none;
+    }
+    .grid{
+        grid-template-columns: 100%;
+    }
 }
 
 #scrollPic{
@@ -246,6 +255,8 @@ main{
     cursor: pointer;
     animation: upAndDown 1s infinite;
     margin-left: 45%;
+    bottom: 50px;
+    position: relative;
 }
 
 #scroll{
