--- a/style.css
+++ b/style.css
@@ -275,3 +275,28 @@ main{
         transform: translateY(-5px);
     }
 }
+
+@media (prefers-color-scheme: dark){
+    body{
+        background-color: #333;
+        color: white;
+    }
+    nav{
+        background-color: #333333;
+    }
+    #MainHeader{
+        background-color: #333;
+    }
+    #Contactbtn{
+        color: white;
+    }
+    #Contactbtn:hover{
+        background-color: white;
+        color: #333;
+        border: 2px solid white;
+        text-decoration: none;
+    }
+    #scroll{
+        display: none;
+    }
+}
